--- a/writing/cogsci2018/library.bib
+++ b/writing/cogsci2018/library.bib
@@ -196,3 +196,9 @@
   year={2012},
   publisher={Sage Publications Sage CA: Los Angeles, CA}
 }
+
+@misc{gabry2016rstanarm,
+  title={rstanarm: Bayesian applied regression modeling via Stan. R package version 2.10. 0},
+  author={Gabry, Jonah and Goodrich, Ben},
+  year={2016}
+}
